Some minor edits to the graphics, setting up basis for a new SDL_Animation class for use in the Sprite Manager to help streamline the animation process.

--- a/PortfolioEngine/PortfolioEngine.vcxproj.filters
+++ b/PortfolioEngine/PortfolioEngine.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Sample Game\src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SDL_Animation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Core\engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SDL_Animation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
