--- a/PortfolioEngine/PortfolioEngine.vcxproj
+++ b/PortfolioEngine/PortfolioEngine.vcxproj
@@ -130,10 +130,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sample Game\src\main.cpp" />
+    <ClCompile Include="SDL_Animation.cpp" />
     <ClCompile Include="src\Core\engine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Core\engine.h" />
+    <ClInclude Include="SDL_Animation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
